# coinbase-kafka-producer

./: Cargo.toml
src/: main.rs
