[package]
name = "coinbase_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
coinbase-pro-rs = "0.8.1"
rdkafka = { version = "0.25" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"

